components/opa/resources/gke/opa.yaml
---
# Source: opa/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: opa
  labels:
    app: opa
    chart: "opa-1.12.0"
    release: "RELEASE-NAME"
    heritage: "Tiller"
spec:
  selector:
    app: opa
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443

---
# Source: opa/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opa
  labels:
    app: opa
    chart: "opa-1.12.0"
    release: "RELEASE-NAME"
    heritage: "Tiller"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opa
  template:
    metadata:
      annotations:
        checksum/certs: 16eb439711a963fb0b5b3629143842142e15fb052de842dc17a3fc8ad7719e7e
      labels:
        app: opa
      name: opa
    spec:
      containers:
        - name: opa
          image: openpolicyagent/opa:0.14.1
          imagePullPolicy: IfNotPresent
          resources:
            {}
            
          args:
            - "run"
            - "--server"
            - "--tls-cert-file=/certs/tls.crt"
            - "--tls-private-key-file=/certs/tls.key"
            - "--addr=0.0.0.0:443"
            - "--log-level=info"
            - "--log-format=text"
            - "--authentication=token"
            - "--authorization=basic"
            - "--ignore=.*"
            - "--addr=http://127.0.0.1:8181"
            - "/bootstrap"
          volumeMounts:
            - name: certs
              readOnly: true
              mountPath: /certs
            - name: bootstrap
              readOnly: true
              mountPath: /bootstrap
          readinessProbe:
            httpGet:
              path: /health
              port: 443
              scheme: HTTPS
            initialDelaySeconds: 3
            periodSeconds: 5
            
          livenessProbe:
            httpGet:
              path: /health
              port: 443
              scheme: HTTPS
            initialDelaySeconds: 3
            periodSeconds: 5
            
        - name: mgmt
          image: openpolicyagent/kube-mgmt:0.9
          imagePullPolicy: IfNotPresent
          resources:
            {}
            
          args:
            - --opa-auth-token-file=/bootstrap/mgmt-token
            - --opa-url=http://127.0.0.1:8181/v1
            - --replicate-path=kubernetes
            - --enable-policies=true
            - --policies=opa,kube-federation-scheduling-policy
            - --require-policy-label=true
          volumeMounts:
            - name: bootstrap
              readOnly: true
              mountPath: /bootstrap
      serviceAccountName: opa
      volumes:
        - name: certs
          secret:
            secretName: opa-cert
        - name: bootstrap
          emptyDir: {}
      nodeSelector:
        {}
        
      tolerations:
        []
        

---
# Source: opa/templates/poddisruptionbudget.yaml


---
# Source: opa/templates/sar-clusterrole.yaml

---
# Source: opa/templates/sar-clusterrolebinding.yaml

---
# Source: opa/templates/secrets.yaml

---
# Source: opa/templates/servicemonitor.yaml


---
# Source: opa/templates/webhookconfiguration.yaml
kind: ValidatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1beta1
metadata:
  name: opa
  annotations:
  labels:
    app: opa
    chart: "opa-1.12.0"
    release: "RELEASE-NAME"
    heritage: "Tiller"
webhooks:
  - name: webhook.openpolicyagent.org
    namespaceSelector:
      matchExpressions:
      - key: openpolicyagent.org/webhook
        operator: NotIn
        values:
        - ignore
      

    failurePolicy: Ignore
    rules:
      - apiGroups:
        - '*'
        apiVersions:
        - '*'
        operations:
        - '*'
        resources:
        - '*'
      
    clientConfig:


      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM4ekNDQWR1Z0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFiTVJrd0Z3WURWUVFERXhCdmNHRXQKWVdSdGFYTnphVzl1TFdOaE1CNFhEVEU1TVRFd09UQXpNamMxTjFvWERUSTVNVEV3TmpBek1qYzFOMW93R3pFWgpNQmNHQTFVRUF4TVFiM0JoTFdGa2JXbHpjMmx2YmkxallUQ0NBU0l3RFFZSktvWklodmNOQVFFQkJRQURnZ0VQCkFEQ0NBUW9DZ2dFQkFMc25SWXFuQUw2a1FQdUlxVXVVcldPMmQ2MFhxam1Lc1hDbkVRblluRXdWMytpL0Z5dFQKVlRIbFhSQ29rajg2VEw0UFZrYUJpUFdTTUY3MDRCTVdtMEdIQ1FDc0FPSHRnYW9oZGM3RXUwWm5ERVNRRU80bgp2NDVHcWVvcTRB [...]


      service:
        name: opa
        namespace: opa
    sideEffects: Unknown
