components/opa/resources/gke/webhookconfiguration.yaml
---
# Source: opa/templates/webhookconfiguration.yaml
kind: ValidatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1beta1
metadata:
  name: opa
  annotations:
  labels:
    app: opa
    chart: "opa-1.12.0"
    release: "RELEASE-NAME"
    heritage: "Tiller"
webhooks:
  - name: webhook.openpolicyagent.org
    namespaceSelector:
      matchExpressions:
      - key: openpolicyagent.org/webhook
        operator: NotIn
        values:
        - ignore
      

    failurePolicy: Ignore
    rules:
      - apiGroups:
        - '*'
        apiVersions:
        - '*'
        operations:
        - '*'
        resources:
        - '*'
      
    clientConfig:


      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM4ekNDQWR1Z0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFiTVJrd0Z3WURWUVFERXhCdmNHRXQKWVdSdGFYTnphVzl1TFdOaE1CNFhEVEU1TVRFd09UQXpNamMxT1ZvWERUSTVNVEV3TmpBek1qYzFPVm93R3pFWgpNQmNHQTFVRUF4TVFiM0JoTFdGa2JXbHpjMmx2YmkxallUQ0NBU0l3RFFZSktvWklodmNOQVFFQkJRQURnZ0VQCkFEQ0NBUW9DZ2dFQkFPQlNycTFMa0RMUDVzVEJTYUdWa0tUWlZ3N3JzUVN6ZFY3OUxkZGRHR0xYUGJHblNic3kKbFJiQ0xIWHZXSkZhS3NrUFZuNnhPSjBld0RUZGdOcmV1R1pIZVMzS1UwUitBdjNZNWdwc1RTT1YxU3NUQWYzbQpDZ21yKzRFdi9H [...]


      service:
        name: opa
        namespace: opa
    sideEffects: Unknown
